fixed spacing of footer on student and teacher login screens

--- a/app/stylesheets/login_student.sass
+++ b/app/stylesheets/login_student.sass
@@ -5,7 +5,7 @@ body.modal
   #footer
     display: block !important
     width: $modal_box_width
-    margin: 20px auto
+    margin: 18px auto
     padding-left: 16px
 
   #main
