--- a/public/stylesheets/compiled/login.css
+++ b/public/stylesheets/compiled/login.css
@@ -2,7 +2,7 @@
 body.modal #footer {
   display: block !important;
   width: 41%;
-  margin: 20px auto;
+  margin: 13px auto;
   padding-left: 16px; }
 /* line 11, ../../../app/stylesheets/login.sass */
 body.modal #main {
